# tg-express

./: .env.example  .gitignore  1_STEP.md  2_PLAN.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
src/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: e4c951b82ed3_initial.py  ec276e6df19f_initial_tables.py
src/backend/app/application/: dto.py
src/backend/app/application/services/: approve_service.py  system_commands.py  to_express_service.py  to_telegram_service.py
src/backend/app/application/utils/: message_filter.py  message_formatter.py  message_splitter.py  retry.py  sanitize.py
src/backend/app/domain/: models.py
src/backend/app/infrastructure/: logging_config.py  sentry_config.py  settings.py
src/backend/app/infrastructure/db/: channel_pair_repo.py  employee_repo.py  mapping_queries.py  models.py  session.py  to_express_repo.py  to_telegram_repo.py
src/backend/app/infrastructure/express/: bot.py  converters.py  handlers.py
src/backend/app/infrastructure/http/: admin_router.py  deps.py  express_webhook_router.py  files_router.py
src/backend/app/infrastructure/s3/: storage.py
src/backend/app/infrastructure/telegram/: bot.py  converters.py
src/backend/app/workers/: __init__.py  admin_api.py  bridge_worker.py  to_express_worker.py  to_telegram_worker.py
src/backend/tests/unit/: test_employee_unset.py  test_express_webhook_router.py  test_message_filter.py  test_message_formatter.py  test_message_splitter.py  test_models.py  test_retry.py  test_s3_storage.py  test_sanitize.py  test_system_commands.py  test_to_express_service.py  test_to_telegram_service.py
src/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.vue  main.ts  router.ts
src/frontend/src/api/: admin.ts
src/frontend/src/views/: ChannelPairs.vue  Employees.vue  Login.vue
